lib/parser.automaton
State 0:
## Known stack suffix:
##
## LR(1) items:
prog' -> . prog [ # ]
## Transitions:
-- On WHILE shift to state 1
-- On STRING shift to state 2
-- On LPAREN shift to state 3
-- On LET shift to state 5
-- On INT shift to state 11
-- On IF shift to state 14
-- On ID shift to state 15
-- On FOR shift to state 64
-- On EOF shift to state 157
-- On prog shift to state 158
-- On openexpr shift to state 71
-- On lvalue shift to state 21
-- On expr shift to state 72
-- On entryexpr shift to state 159
-- On constant shift to state 26
-- On closedexpr shift to state 74
-- On binop shift to state 27
## Reductions:

State 1:
## Known stack suffix:
## WHILE
## LR(1) items:
expr -> WHILE . expr DO expr [ WHILE VAR TYPE TO TIMES THEN STRING SEMICOLON RPAREN RBRACK RBRACE PLUS OR NEQ MINUS LPAREN LET INT IN IF ID GT FUNCTION FOR EQ EOF END ELSE DO COMMA AND ]
## Transitions:
-- On WHILE shift to state 1
-- On STRING shift to state 2
-- On LPAREN shift to state 3
-- On LET shift to state 5
-- On INT shift to state 11
-- On ID shift to state 15
-- On lvalue shift to state 21
-- On expr shift to state 154
-- On constant shift to state 26
-- On binop shift to state 27
## Reductions:

State 2:
## Known stack suffix:
## STRING
## LR(1) items:
constant -> STRING . [ WHILE VAR TYPE TO TIMES THEN STRING SEMICOLON RPAREN RBRACK RBRACE PLUS OR NEQ MINUS LPAREN LET INT IN IF ID GT FUNCTION FOR EQ EOF END ELSE DO COMMA AND ]
## Transitions:
## Reductions:
-- On WHILE VAR TYPE TO TIMES THEN STRING SEMICOLON RPAREN RBRACK RBRACE PLUS OR NEQ MINUS LPAREN LET INT IN IF ID GT FUNCTION FOR EQ EOF END ELSE DO COMMA AND
--   reduce production constant -> STRING

State 3:
## Known stack suffix:
## LPAREN
## LR(1) items:
expr -> LPAREN . RPAREN [ WHILE VAR TYPE TO TIMES THEN STRING SEMICOLON RPAREN RBRACK RBRACE PLUS OR NEQ MINUS LPAREN LET INT IN IF ID GT FUNCTION FOR EQ EOF END ELSE DO COMMA AND ]
expr -> LPAREN . nonempty_list(exprseq) RPAREN [ WHILE VAR TYPE TO TIMES THEN STRING SEMICOLON RPAREN RBRACK RBRACE PLUS OR NEQ MINUS LPAREN LET INT IN IF ID GT FUNCTION FOR EQ EOF END ELSE DO COMMA AND ]
## Transitions:
-- On WHILE shift to state 1
-- On STRING shift to state 2
-- On RPAREN shift to state 4
-- On LPAREN shift to state 3
-- On LET shift to state 5
-- On INT shift to state 11
-- On IF shift to state 14
-- On ID shift to state 15
-- On FOR shift to state 64
-- On openexpr shift to state 71
-- On nonempty_list(exprseq) shift to state 150
-- On lvalue shift to state 21
-- On exprseq shift to state 152
-- On expr shift to state 72
-- On entryexpr shift to state 145
-- On constant shift to state 26
-- On closedexpr shift to state 74
-- On binop shift to state 27
## Reductions:

State 4:
## Known stack suffix:
## LPAREN RPAREN
## LR(1) items:
expr -> LPAREN RPAREN . [ WHILE VAR TYPE TO TIMES THEN STRING SEMICOLON RPAREN RBRACK RBRACE PLUS OR NEQ MINUS LPAREN LET INT IN IF ID GT FUNCTION FOR EQ EOF END ELSE DO COMMA AND ]
## Transitions:
## Reductions:
-- On WHILE VAR TYPE TO TIMES THEN STRING SEMICOLON RPAREN RBRACK RBRACE PLUS OR NEQ MINUS LPAREN LET INT IN IF ID GT FUNCTION FOR EQ EOF END ELSE DO COMMA AND
--   reduce production expr -> LPAREN RPAREN

State 5:
## Known stack suffix:
## LET
## LR(1) items:
expr -> LET . list(dec) IN list(exprseq) END [ WHILE VAR TYPE TO TIMES THEN STRING SEMICOLON RPAREN RBRACK RBRACE PLUS OR NEQ MINUS LPAREN LET INT IN IF ID GT FUNCTION FOR EQ EOF END ELSE DO COMMA AND ]
## Transitions:
-- On VAR shift to state 6
-- On TYPE shift to state 103
-- On FUNCTION shift to state 123
-- On vardec shift to state 137
-- On tydecs shift to state 138
-- On list(dec) shift to state 139
-- On fundecs shift to state 147
-- On dec shift to state 148
## Reductions:
-- On IN
--   reduce production list(dec) ->

State 6:
## Known stack suffix:
## VAR
## LR(1) items:
vardec -> VAR . ID COLON ID ASSIGN expr [ VAR TYPE IN FUNCTION ]
vardec -> VAR . ID COLON ID ASSIGN ID LBRACK expr RBRACK OF expr [ VAR TYPE IN FUNCTION ]
vardec -> VAR . ID ASSIGN expr [ VAR TYPE IN FUNCTION ]
vardec -> VAR . ID ASSIGN ID LBRACK expr RBRACK OF expr [ VAR TYPE IN FUNCTION ]
## Transitions:
-- On ID shift to state 7
## Reductions:

State 7:
## Known stack suffix:
## VAR ID
## LR(1) items:
vardec -> VAR ID . COLON ID ASSIGN expr [ VAR TYPE IN FUNCTION ]
vardec -> VAR ID . COLON ID ASSIGN ID LBRACK expr RBRACK OF expr [ VAR TYPE IN FUNCTION ]
vardec -> VAR ID . ASSIGN expr [ VAR TYPE IN FUNCTION ]
vardec -> VAR ID . ASSIGN ID LBRACK expr RBRACK OF expr [ VAR TYPE IN FUNCTION ]
## Transitions:
-- On COLON shift to state 8
-- On ASSIGN shift to state 95
## Reductions:

State 8:
## Known stack suffix:
## VAR ID COLON
## LR(1) items:
vardec -> VAR ID COLON . ID ASSIGN expr [ VAR TYPE IN FUNCTION ]
vardec -> VAR ID COLON . ID ASSIGN ID LBRACK expr RBRACK OF expr [ VAR TYPE IN FUNCTION ]
## Transitions:
-- On ID shift to state 9
## Reductions:

State 9:
## Known stack suffix:
## VAR ID COLON ID
## LR(1) items:
vardec -> VAR ID COLON ID . ASSIGN expr [ VAR TYPE IN FUNCTION ]
vardec -> VAR ID COLON ID . ASSIGN ID LBRACK expr RBRACK OF expr [ VAR TYPE IN FUNCTION ]
## Transitions:
-- On ASSIGN shift to state 10
## Reductions:

State 10:
## Known stack suffix:
## VAR ID COLON ID ASSIGN
## LR(1) items:
vardec -> VAR ID COLON ID ASSIGN . expr [ VAR TYPE IN FUNCTION ]
vardec -> VAR ID COLON ID ASSIGN . ID LBRACK expr RBRACK OF expr [ VAR TYPE IN FUNCTION ]
## Transitions:
-- On WHILE shift to state 1
-- On STRING shift to state 2
-- On LPAREN shift to state 3
-- On LET shift to state 5
-- On INT shift to state 11
-- On ID shift to state 12
-- On lvalue shift to state 21
-- On expr shift to state 94
-- On constant shift to state 26
-- On binop shift to state 27
## Reductions:

State 11:
## Known stack suffix:
## INT
## LR(1) items:
constant -> INT . [ WHILE VAR TYPE TO TIMES THEN STRING SEMICOLON RPAREN RBRACK RBRACE PLUS OR NEQ MINUS LPAREN LET INT IN IF ID GT FUNCTION FOR EQ EOF END ELSE DO COMMA AND ]
## Transitions:
## Reductions:
-- On WHILE VAR TYPE TO TIMES THEN STRING SEMICOLON RPAREN RBRACK RBRACE PLUS OR NEQ MINUS LPAREN LET INT IN IF ID GT FUNCTION FOR EQ EOF END ELSE DO COMMA AND
--   reduce production constant -> INT

State 12:
## Known stack suffix:
## VAR ID COLON ID ASSIGN ID
## LR(1) items:
expr -> ID . LBRACE list(fields) RBRACE [ VAR TYPE TIMES PLUS OR NEQ MINUS IN GT FUNCTION EQ AND ]
expr -> ID . LPAREN list(exprlist) RPAREN [ VAR TYPE TIMES PLUS OR NEQ MINUS IN GT FUNCTION EQ AND ]
lvalue -> ID . [ VAR TYPE TIMES PLUS OR NEQ MINUS LBRACK IN GT FUNCTION EQ DOT ASSIGN AND ]
vardec -> VAR ID COLON ID ASSIGN ID . LBRACK expr RBRACK OF expr [ VAR TYPE IN FUNCTION ]
## Transitions:
-- On LPAREN shift to state 13
-- On LBRACK shift to state 89
-- On LBRACE shift to state 16
## Reductions:
-- On VAR TYPE TIMES PLUS OR NEQ MINUS IN GT FUNCTION EQ DOT ASSIGN AND
--   reduce production lvalue -> ID

State 13:
## Known stack suffix:
## ID LPAREN
## LR(1) items:
expr -> ID LPAREN . list(exprlist) RPAREN [ WHILE VAR TYPE TO TIMES THEN STRING SEMICOLON RPAREN RBRACK RBRACE PLUS OR NEQ MINUS LPAREN LET INT IN IF ID GT FUNCTION FOR EQ EOF END ELSE DO COMMA AND ]
## Transitions:
-- On WHILE shift to state 1
-- On STRING shift to state 2
-- On LPAREN shift to state 3
-- On LET shift to state 5
-- On INT shift to state 11
-- On IF shift to state 14
-- On ID shift to state 15
-- On FOR shift to state 64
-- On openexpr shift to state 71
-- On lvalue shift to state 21
-- On list(exprlist) shift to state 83
-- On exprlist shift to state 85
-- On expr shift to state 72
-- On entryexpr shift to state 87
-- On constant shift to state 26
-- On closedexpr shift to state 74
-- On binop shift to state 27
## Reductions:
-- On RPAREN
--   reduce production list(exprlist) ->

State 14:
## Known stack suffix:
## IF
## LR(1) items:
closedexpr -> IF . entryexpr THEN closedexpr ELSE closedexpr [ WHILE VAR TYPE THEN STRING SEMICOLON RPAREN LPAREN LET INT IN IF ID FUNCTION FOR EOF END ELSE COMMA ]
openexpr -> IF . entryexpr THEN expr [ WHILE VAR TYPE THEN STRING SEMICOLON RPAREN LPAREN LET INT IN IF ID FUNCTION FOR EOF END COMMA ]
openexpr -> IF . entryexpr THEN openexpr [ WHILE VAR TYPE THEN STRING SEMICOLON RPAREN LPAREN LET INT IN IF ID FUNCTION FOR EOF END COMMA ]
openexpr -> IF . entryexpr THEN closedexpr ELSE openexpr [ WHILE VAR TYPE THEN STRING SEMICOLON RPAREN LPAREN LET INT IN IF ID FUNCTION FOR EOF END COMMA ]
## Transitions:
-- On WHILE shift to state 1
-- On STRING shift to state 2
-- On LPAREN shift to state 3
-- On LET shift to state 5
-- On INT shift to state 11
-- On IF shift to state 14
-- On ID shift to state 15
-- On FOR shift to state 64
-- On openexpr shift to state 71
-- On lvalue shift to state 21
-- On expr shift to state 72
-- On entryexpr shift to state 75
-- On constant shift to state 26
-- On closedexpr shift to state 74
-- On binop shift to state 27
## Reductions:

State 15:
## Known stack suffix:
## ID
## LR(1) items:
expr -> ID . LBRACE list(fields) RBRACE [ WHILE VAR TYPE TO TIMES THEN STRING SEMICOLON RPAREN RBRACK RBRACE PLUS OR NEQ MINUS LPAREN LET INT IN IF ID GT FUNCTION FOR EQ EOF END ELSE DO COMMA AND ]
expr -> ID . LPAREN list(exprlist) RPAREN [ WHILE VAR TYPE TO TIMES THEN STRING SEMICOLON RPAREN RBRACK RBRACE PLUS OR NEQ MINUS LPAREN LET INT IN IF ID GT FUNCTION FOR EQ EOF END ELSE DO COMMA AND ]
lvalue -> ID . [ WHILE VAR TYPE TO TIMES THEN STRING SEMICOLON RPAREN RBRACK RBRACE PLUS OR NEQ MINUS LPAREN LET LBRACK INT IN IF ID GT FUNCTION FOR EQ EOF END ELSE DOT DO COMMA ASSIGN AND ]
## Transitions:
-- On LPAREN shift to state 13
-- On LBRACE shift to state 16
## Reductions:
-- On WHILE VAR TYPE TO TIMES THEN STRING SEMICOLON RPAREN RBRACK RBRACE PLUS OR NEQ MINUS LET LBRACK INT IN IF ID GT FUNCTION FOR EQ EOF END ELSE DOT DO COMMA ASSIGN AND
--   reduce production lvalue -> ID

State 16:
## Known stack suffix:
## ID LBRACE
## LR(1) items:
expr -> ID LBRACE . list(fields) RBRACE [ WHILE VAR TYPE TO TIMES THEN STRING SEMICOLON RPAREN RBRACK RBRACE PLUS OR NEQ MINUS LPAREN LET INT IN IF ID GT FUNCTION FOR EQ EOF END ELSE DO COMMA AND ]
## Transitions:
-- On ID shift to state 17
-- On list(fields) shift to state 58
-- On fields shift to state 60
-- On field shift to state 62
## Reductions:
-- On RBRACE
--   reduce production list(fields) ->

State 17:
## Known stack suffix:
## ID
## LR(1) items:
field -> ID . EQ expr [ RBRACE ID COMMA ]
field -> ID . EQ ID LBRACK expr RBRACK OF expr [ RBRACE ID COMMA ]
## Transitions:
-- On EQ shift to state 18
## Reductions:

State 18:
## Known stack suffix:
## ID EQ
## LR(1) items:
field -> ID EQ . expr [ RBRACE ID COMMA ]
field -> ID EQ . ID LBRACK expr RBRACK OF expr [ RBRACE ID COMMA ]
## Transitions:
-- On WHILE shift to state 1
-- On STRING shift to state 2
-- On LPAREN shift to state 3
-- On LET shift to state 5
-- On INT shift to state 11
-- On ID shift to state 19
-- On lvalue shift to state 21
-- On expr shift to state 57
-- On constant shift to state 26
-- On binop shift to state 27
## Reductions:

State 19:
## Known stack suffix:
## ID EQ ID
## LR(1) items:
expr -> ID . LBRACE list(fields) RBRACE [ TIMES RBRACE PLUS OR NEQ MINUS ID GT EQ COMMA AND ]
expr -> ID . LPAREN list(exprlist) RPAREN [ TIMES RBRACE PLUS OR NEQ MINUS ID GT EQ COMMA AND ]
field -> ID EQ ID . LBRACK expr RBRACK OF expr [ RBRACE ID COMMA ]
lvalue -> ID . [ TIMES RBRACE PLUS OR NEQ MINUS LBRACK ID GT EQ DOT COMMA ASSIGN AND ]
## Transitions:
-- On LPAREN shift to state 13
-- On LBRACK shift to state 20
-- On LBRACE shift to state 16
## Reductions:
-- On TIMES RBRACE PLUS OR NEQ MINUS ID GT EQ DOT COMMA ASSIGN AND
--   reduce production lvalue -> ID

State 20:
## Known stack suffix:
## ID EQ ID LBRACK
## LR(1) items:
field -> ID EQ ID LBRACK . expr RBRACK OF expr [ RBRACE ID COMMA ]
## Transitions:
-- On WHILE shift to state 1
-- On STRING shift to state 2
-- On LPAREN shift to state 3
-- On LET shift to state 5
-- On INT shift to state 11
-- On ID shift to state 15
-- On lvalue shift to state 21
-- On expr shift to state 53
-- On constant shift to state 26
-- On binop shift to state 27
## Reductions:

State 21:
## Known stack suffix:
## lvalue
## LR(1) items:
expr -> lvalue . [ WHILE VAR TYPE TO TIMES THEN STRING SEMICOLON RPAREN RBRACK RBRACE PLUS OR NEQ MINUS LPAREN LET INT IN IF ID GT FUNCTION FOR EQ EOF END ELSE DO COMMA AND ]
expr -> lvalue . ASSIGN expr [ WHILE VAR TYPE TO TIMES THEN STRING SEMICOLON RPAREN RBRACK RBRACE PLUS OR NEQ MINUS LPAREN LET INT IN IF ID GT FUNCTION FOR EQ EOF END ELSE DO COMMA AND ]
expr -> lvalue . ASSIGN ID LBRACK expr RBRACK OF expr [ WHILE VAR TYPE TO TIMES THEN STRING SEMICOLON RPAREN RBRACK RBRACE PLUS OR NEQ MINUS LPAREN LET INT IN IF ID GT FUNCTION FOR EQ EOF END ELSE DO COMMA AND ]
lvalue -> lvalue . DOT ID [ WHILE VAR TYPE TO TIMES THEN STRING SEMICOLON RPAREN RBRACK RBRACE PLUS OR NEQ MINUS LPAREN LET LBRACK INT IN IF ID GT FUNCTION FOR EQ EOF END ELSE DOT DO COMMA ASSIGN AND ]
lvalue -> lvalue . LBRACK expr RBRACK [ WHILE VAR TYPE TO TIMES THEN STRING SEMICOLON RPAREN RBRACK RBRACE PLUS OR NEQ MINUS LPAREN LET LBRACK INT IN IF ID GT FUNCTION FOR EQ EOF END ELSE DOT DO COMMA ASSIGN AND ]
## Transitions:
-- On LBRACK shift to state 22
-- On DOT shift to state 43
-- On ASSIGN shift to state 45
## Reductions:
-- On WHILE VAR TYPE TO TIMES THEN STRING SEMICOLON RPAREN RBRACK RBRACE PLUS OR NEQ MINUS LPAREN LET INT IN IF ID GT FUNCTION FOR EQ EOF END ELSE DO COMMA AND
--   reduce production expr -> lvalue

State 22:
## Known stack suffix:
## lvalue LBRACK
## LR(1) items:
lvalue -> lvalue LBRACK . expr RBRACK [ WHILE VAR TYPE TO TIMES THEN STRING SEMICOLON RPAREN RBRACK RBRACE PLUS OR NEQ MINUS LPAREN LET LBRACK INT IN IF ID GT FUNCTION FOR EQ EOF END ELSE DOT DO COMMA ASSIGN AND ]
## Transitions:
-- On WHILE shift to state 1
-- On STRING shift to state 2
-- On LPAREN shift to state 3
-- On LET shift to state 5
-- On INT shift to state 11
-- On ID shift to state 15
-- On lvalue shift to state 21
-- On expr shift to state 23
-- On constant shift to state 26
-- On binop shift to state 27
## Reductions:

State 23:
## Known stack suffix:
## lvalue LBRACK expr
## LR(1) items:
binop -> expr . EQ expr [ TIMES RBRACK PLUS OR NEQ MINUS GT EQ AND ]
binop -> expr . NEQ expr [ TIMES RBRACK PLUS OR NEQ MINUS GT EQ AND ]
binop -> expr . TIMES expr [ TIMES RBRACK PLUS OR NEQ MINUS GT EQ AND ]
binop -> expr . MINUS expr [ TIMES RBRACK PLUS OR NEQ MINUS GT EQ AND ]
binop -> expr . PLUS expr [ TIMES RBRACK PLUS OR NEQ MINUS GT EQ AND ]
binop -> expr . GT expr [ TIMES RBRACK PLUS OR NEQ MINUS GT EQ AND ]
expr -> expr . AND expr [ TIMES RBRACK PLUS OR NEQ MINUS GT EQ AND ]
expr -> expr . OR expr [ TIMES RBRACK PLUS OR NEQ MINUS GT EQ AND ]
lvalue -> lvalue LBRACK expr . RBRACK [ WHILE VAR TYPE TO TIMES THEN STRING SEMICOLON RPAREN RBRACK RBRACE PLUS OR NEQ MINUS LPAREN LET LBRACK INT IN IF ID GT FUNCTION FOR EQ EOF END ELSE DOT DO COMMA ASSIGN AND ]
## Transitions:
-- On TIMES shift to state 24
-- On RBRACK shift to state 28
-- On PLUS shift to state 29
-- On OR shift to state 31
-- On NEQ shift to state 33
-- On MINUS shift to state 35
-- On GT shift to state 37
-- On EQ shift to state 39
-- On AND shift to state 41
## Reductions:

State 24:
## Known stack suffix:
## expr TIMES
## LR(1) items:
binop -> expr TIMES . expr [ WHILE VAR TYPE TO TIMES THEN STRING SEMICOLON RPAREN RBRACK RBRACE PLUS OR NEQ MINUS LPAREN LET INT IN IF ID GT FUNCTION FOR EQ EOF END ELSE DO COMMA AND ]
## Transitions:
-- On WHILE shift to state 1
-- On STRING shift to state 2
-- On LPAREN shift to state 3
-- On LET shift to state 5
-- On INT shift to state 11
-- On ID shift to state 15
-- On lvalue shift to state 21
-- On expr shift to state 25
-- On constant shift to state 26
-- On binop shift to state 27
## Reductions:

State 25:
## Known stack suffix:
## expr TIMES expr
## LR(1) items:
binop -> expr . EQ expr [ WHILE VAR TYPE TO TIMES THEN STRING SEMICOLON RPAREN RBRACK RBRACE PLUS OR NEQ MINUS LPAREN LET INT IN IF ID GT FUNCTION FOR EQ EOF END ELSE DO COMMA AND ]
binop -> expr . NEQ expr [ WHILE VAR TYPE TO TIMES THEN STRING SEMICOLON RPAREN RBRACK RBRACE PLUS OR NEQ MINUS LPAREN LET INT IN IF ID GT FUNCTION FOR EQ EOF END ELSE DO COMMA AND ]
binop -> expr . TIMES expr [ WHILE VAR TYPE TO TIMES THEN STRING SEMICOLON RPAREN RBRACK RBRACE PLUS OR NEQ MINUS LPAREN LET INT IN IF ID GT FUNCTION FOR EQ EOF END ELSE DO COMMA AND ]
binop -> expr TIMES expr . [ WHILE VAR TYPE TO TIMES THEN STRING SEMICOLON RPAREN RBRACK RBRACE PLUS OR NEQ MINUS LPAREN LET INT IN IF ID GT FUNCTION FOR EQ EOF END ELSE DO COMMA AND ]
binop -> expr . MINUS expr [ WHILE VAR TYPE TO TIMES THEN STRING SEMICOLON RPAREN RBRACK RBRACE PLUS OR NEQ MINUS LPAREN LET INT IN IF ID GT FUNCTION FOR EQ EOF END ELSE DO COMMA AND ]
binop -> expr . PLUS expr [ WHILE VAR TYPE TO TIMES THEN STRING SEMICOLON RPAREN RBRACK RBRACE PLUS OR NEQ MINUS LPAREN LET INT IN IF ID GT FUNCTION FOR EQ EOF END ELSE DO COMMA AND ]
binop -> expr . GT expr [ WHILE VAR TYPE TO TIMES THEN STRING SEMICOLON RPAREN RBRACK RBRACE PLUS OR NEQ MINUS LPAREN LET INT IN IF ID GT FUNCTION FOR EQ EOF END ELSE DO COMMA AND ]
expr -> expr . AND expr [ WHILE VAR TYPE TO TIMES THEN STRING SEMICOLON RPAREN RBRACK RBRACE PLUS OR NEQ MINUS LPAREN LET INT IN IF ID GT FUNCTION FOR EQ EOF END ELSE DO COMMA AND ]
expr -> expr . OR expr [ WHILE VAR TYPE TO TIMES THEN STRING SEMICOLON RPAREN RBRACK RBRACE PLUS OR NEQ MINUS LPAREN LET INT IN IF ID GT FUNCTION FOR EQ EOF END ELSE DO COMMA AND ]
## Transitions:
## Reductions:
-- On WHILE VAR TYPE TO TIMES THEN STRING SEMICOLON RPAREN RBRACK RBRACE PLUS OR NEQ MINUS LPAREN LET INT IN IF ID GT FUNCTION FOR EQ EOF END ELSE DO COMMA AND
--   reduce production binop -> expr TIMES expr

State 26:
## Known stack suffix:
## constant
## LR(1) items:
expr -> constant . [ WHILE VAR TYPE TO TIMES THEN STRING SEMICOLON RPAREN RBRACK RBRACE PLUS OR NEQ MINUS LPAREN LET INT IN IF ID GT FUNCTION FOR EQ EOF END ELSE DO COMMA AND ]
## Transitions:
## Reductions:
-- On WHILE VAR TYPE TO TIMES THEN STRING SEMICOLON RPAREN RBRACK RBRACE PLUS OR NEQ MINUS LPAREN LET INT IN IF ID GT FUNCTION FOR EQ EOF END ELSE DO COMMA AND
--   reduce production expr -> constant
